Updated FDSMATL to the level of FDSSURF.

--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -502,9 +502,9 @@
     "    def compile_surf(self, show=False):\n",
     "        surf_lines = []\n",
     "        num_matl = len(self.materials)\n",
-    "        print(self.materials)\n",
     "        matl_count = 1\n",
     "        \n",
+    "        #Process the basic surface parameters.\n",
     "        for component in self.param_base[:]:\n",
     "            idfr = '{}'.format(component[0])\n",
     "            \n",
@@ -526,7 +526,7 @@
     "        \n",
     "        # Add different materials.\n",
     "        for matl_dict in self.materials:\n",
-    "            print('len matl_dict',len(self.materials))\n",
+    "#             print('len matl_dict',len(self.materials))\n",
     "            \n",
     "            # Check if material(s) are provided, by using the existance\n",
     "            # of thickness as an indicator.\n",
@@ -559,7 +559,7 @@
     "                                              '1', matl_ids)\n",
     "                mf = ''\n",
     "                for md in matl_dict[idfr]:\n",
-    "                    mf += \"'{}', \".format(md)\n",
+    "                    mf += \"{}, \".format(md)\n",
     "                mf = mf[:-2]\n",
     "                new_c = \"      \" + self.surf_temp[idfr].format(comp_id,\n",
     "                                                               mf)\n",
@@ -757,21 +757,30 @@
     "        self.reactions = []\n",
     "        \n",
     "        # Attempt to handle cases with only one reaction.\n",
-    "        self.reac_param_base2 = [['a', self.a], \n",
+    "        self.reac_param_base1 = [['a', self.a], \n",
     "                                 ['e', self.e], \n",
-    "                                 ['n_s', self.n_s],\n",
-    "                                 ['nu_matl', self.nu_matl], \n",
-    "                                 ['matl_id', self.matl_id], \n",
-    "                                 ['nu_spec', self.nu_spec],\n",
-    "                                 ['spec_id', self.spec_id], \n",
+    "                                 ['n_s', self.n_s], \n",
     "                                 ['heat_of_comb', self.heat_of_comb],\n",
     "                                 ['heat_of_reac', self.heat_of_reac]]\n",
-    "        self.reac_param_base = [self.a, self.e, self.n_s,\n",
-    "                                self.nu_matl, self.matl_id, self.nu_spec,\n",
-    "                                self.spec_id, self.heat_of_comb,\n",
-    "                                self.heat_of_reac]\n",
-    "        for i in self.reac_param_base:\n",
-    "            if i is not None:\n",
+    "        \n",
+    "        self.reac_param_base2 = [['nu_matl', self.nu_matl], \n",
+    "                                 ['matl_id', self.matl_id], \n",
+    "                                 ['nu_spec', self.nu_spec],\n",
+    "                                 ['spec_id', self.spec_id]]\n",
+    "        \n",
+    "        self.reac_param_base1_dict = {'a': self.a,\n",
+    "                                      'e': self.e,\n",
+    "                                      'n_s': self.n_s,\n",
+    "                                      'heat_of_comb': self.heat_of_comb,\n",
+    "                                      'heat_of_reac': self.heat_of_reac}\n",
+    "        \n",
+    "        self.reac_param_base2_dict = {'nu_matl': self.nu_matl,\n",
+    "                                      'matl_id': self.matl_id,\n",
+    "                                      'nu_spec': self.nu_spec,\n",
+    "                                      'spec_id': self.spec_id}\n",
+    "        \n",
+    "        for i in self.reac_param_base1:\n",
+    "            if i[1] is not None:\n",
     "                self.add_reaction(self.a, self.e, self.n_s,\n",
     "                                  self.nu_matl, self.matl_id, self.nu_spec,\n",
     "                                  self.spec_id, self.heat_of_comb,\n",
@@ -793,23 +802,26 @@
     "        self.heat_of_comb = heat_of_comb\n",
     "        self.heat_of_reac = heat_of_reac\n",
     "        \n",
-    "        new_reac = {'a': self.a, \n",
-    "                    'e': self.e, \n",
-    "                    'n_s': self.n_s,\n",
-    "                    'nu_matl': self.nu_matl, \n",
-    "                    'matl_id': self.matl_id, \n",
-    "                    'nu_spec': self.nu_spec, \n",
-    "                    'spec_id': self.spec_id, \n",
-    "                    'heat_of_comb': self.heat_of_comb, \n",
-    "                    'heat_of_reac': self.heat_of_reac}\n",
+    "        new_reac1 = {'a': self.a,\n",
+    "                     'e': self.e,\n",
+    "                     'n_s': self.n_s,\n",
+    "                     'heat_of_comb': self.heat_of_comb,\n",
+    "                     'heat_of_reac': self.heat_of_reac}\n",
     "        \n",
-    "        self.reactions.append(new_reac)\n",
+    "        new_reac2 = {'nu_matl': self.nu_matl,\n",
+    "                     'matl_id': self.matl_id,\n",
+    "                     'nu_spec': self.nu_spec,\n",
+    "                     'spec_id': self.spec_id}\n",
+    "        \n",
+    "        self.reactions.append([new_reac1, \n",
+    "                               new_reac2])\n",
     "    \n",
     "    def compile_matl(self, show=False):\n",
     "        matl_lines = []\n",
     "        num_reac = len(self.reactions)\n",
     "        reac_count = 1\n",
     "        \n",
+    "        # Process the basic material parameters.\n",
     "        for component in self.param_base[:]:\n",
     "            idfr = '{}'.format(component[0])\n",
     "            \n",
@@ -823,36 +835,53 @@
     "                matl_lines.append(new_c + ',')\n",
     "        \n",
     "        if num_reac is not 0:\n",
-    "            # print('no reac')\n",
-    "            new_c = \"      \" + self.matl_temp['n_reactions'].format(num_reac)\n",
+    "            idfr = 'n_reactions'\n",
+    "            new_c = \"      \" + self.matl_temp[idfr].format(num_reac)\n",
     "            matl_lines.append(new_c + ',')\n",
     "        \n",
-    "        for reac_dict in self.reactions:\n",
-    "            \n",
-    "            for reac_para in self.reac_param_base2:\n",
-    "                idfr = '{}'.format(reac_para[0])\n",
+    "        for reac_list in self.reactions:\n",
+    "            # Check if reaction information is provided.\n",
+    "            if num_reac is not 0:\n",
+    "                reac_ids = len(reac_list[0]['a'])\n",
+    "                reac_num = '1:{}'.format(reac_ids)\n",
     "                \n",
-    "                if reac_dict[idfr] is not None:\n",
-    "                    new_c = \"      \" + self.matl_temp[idfr].format(reac_count, \n",
-    "                                                                   reac_dict[idfr])\n",
+    "                # Build the first block of reaction input.\n",
+    "                for idfr in self.reac_param_base1[:-2]:\n",
+    "                    \n",
+    "                    para = ''\n",
+    "                    for par in reac_list[0][idfr[0]]:\n",
+    "                        para += \"{}, \".format(par)\n",
+    "                    para = para[:-2]\n",
+    "                    new_c = \"      \" + self.matl_temp[idfr[0]].format(reac_num,\n",
+    "                                                                      para)\n",
     "                    matl_lines.append(new_c + ',')\n",
-    "            reac_count += 1\n",
-    "        \n",
-    "# #         for component in self.param_base[-2:]:\n",
-    "# #             idfr = '{}'.format(component[0])\n",
-    "            \n",
-    "#             if self.param_base_dict[idfr] is not None:\n",
-    "#                 comp = self.matl_temp[idfr]\n",
-    "#                 if component[0] is not 'init':\n",
-    "#                     comp = '      ' + comp\n",
+    "                    \n",
+    "                # Build the second block of reaction input.\n",
+    "                # Contains information on material and species yields.\n",
+    "                comp_id = '{},{}:{}'.format(reac_count,\n",
+    "                                            '1', reac_ids)\n",
+    "                for idfr in self.reac_param_base2:\n",
+    "                    \n",
+    "                    para = ''\n",
+    "                    #print(reac_list[1],reac_list[1][idfr[0]])\n",
+    "                    for par in reac_list[1][idfr[0]]:\n",
+    "                        para += \"{}, \".format(par)\n",
+    "                    para = para[:-2]\n",
+    "                    \n",
+    "                    new_c = \"      \" + self.matl_temp[idfr[0]].format(comp_id,\n",
+    "                                                                      para)\n",
+    "                    matl_lines.append(new_c + ',')\n",
     "                \n",
-    "#                 new_c = comp.format(reac_count, \n",
-    "#                                     self.param_base_dict[idfr])\n",
-    "#                 #print(new_c)\n",
-    "#                 matl_lines.append(new_c + ',')\n",
-    "        \n",
-    "#         new_c = \"      \" + self.matl_temp['n_reactions'].format(num_reac)\n",
-    "#         matl_lines.append(new_c + ',')\n",
+    "                # Build the third block of reaction input.\n",
+    "                for idfr in self.reac_param_base1[-2:]:\n",
+    "                    \n",
+    "                    para = ''\n",
+    "                    for par in reac_list[0][idfr[0]]:\n",
+    "                        para += \"{}, \".format(par)\n",
+    "                    para = para[:-2]\n",
+    "                    new_c = \"      \" + self.matl_temp[idfr[0]].format(reac_num,\n",
+    "                                                                      para)\n",
+    "                    matl_lines.append(new_c + ',')\n",
     "        \n",
     "        matl_lines[-1] = matl_lines[-1][:-1] + ' /\\n'\n",
     "        \n",
@@ -861,29 +890,6 @@
     "                print(line)\n",
     "        \n",
     "        return matl_lines\n",
-    "\n",
-    "#     def compile_matl(self, show=False):\n",
-    "#         matl_lines = []\n",
-    "        \n",
-    "#         for component in self.mp:\n",
-    "#             idfr = '{}'.format(component)\n",
-    "            \n",
-    "#             if self.mp[idfr] is not None:\n",
-    "#                 comp = self.matl_temp[idfr]\n",
-    "#                 if component is not 'init':\n",
-    "#                     comp = '      ' + comp\n",
-    "                \n",
-    "#                 new_c = comp.format(self.mp[idfr])+','\n",
-    "#                 #print(new_c)\n",
-    "#                 matl_lines.append(new_c)\n",
-    "        \n",
-    "#         matl_lines[-1] = matl_lines[-1][:-1] + ' /'\n",
-    "        \n",
-    "#         if show is True:\n",
-    "#             for line in matl_lines:\n",
-    "#                 print(line)\n",
-    "        \n",
-    "#         return matl_lines\n",
     "    \n",
     "    def show_reactions(self):\n",
     "        \n",
