Started on OBST.

--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -1140,6 +1140,99 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Obstructions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################\n",
+    "# OBSTRUCTION CLASS\n",
+    "class Obst:\n",
+    "    \"\"\"\n",
+    "    Set size and position of an obstruction in FDS.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, pos_x=0.0, pos_y=0.0, pos_z=0.0,\n",
+    "                 len_x=1.0, len_y=1.0, len_z=1.0):\n",
+    "\n",
+    "        # Starting point.\n",
+    "        self.pos_x = float(pos_x)\n",
+    "        self.pos_y = float(pos_y)\n",
+    "        self.pos_z = float(pos_z)\n",
+    "\n",
+    "        # Edge length.\n",
+    "        self.len_x = float(len_x)\n",
+    "        self.len_y = float(len_y)\n",
+    "        self.len_z = float(len_z)\n",
+    "\n",
+    "    def get_obst(self):\n",
+    "        # Calculate dimensions and position of the obstruction.\n",
+    "        # Start.\n",
+    "        x1 = self.pos_x\n",
+    "        y1 = self.pos_y\n",
+    "        z1 = self.pos_z\n",
+    "\n",
+    "        # End.\n",
+    "        x2 = self.pos_x + self.len_x\n",
+    "        y2 = self.pos_y + self.len_y\n",
+    "        z2 = self.pos_z + self.len_z\n",
+    "\n",
+    "        # Create box shape of obstruction.\n",
+    "        bx1 = BoxShape(x1, x2,\n",
+    "                       y1, y2,\n",
+    "                       z1,  z2)\n",
+    "\n",
+    "        # Attach surface to obstruction.\n",
+    "        sf1 = Surf()\n",
+    "\n",
+    "        # Finalise obstruction for FDS input file.\n",
+    "        obst = \"&OBST {}, {} /\".format(bx1.get_box(), sf1.get_surf())\n",
+    "\n",
+    "        return obst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
