--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -1201,6 +1201,479 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.43658\n",
+      "3.44\n",
+      "  3.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3.43658)\n",
+    "digits = 2\n",
+    "dt = \"{\"+\":.{}f\".format(digits)+\"}\"\n",
+    "# print('{:.2f}'.format(3.43658))\n",
+    "ndt = dt.format(3.43658)\n",
+    "print(ndt)\n",
+    "\n",
+    "total_chars = 6\n",
+    "ls = \"{\"+\":>{}s\".format(total_chars)+\"}\"\n",
+    "print(ls.format(str(ndt)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 3.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"{:>5s}\".format(str(\"{:.2f}\".format(3.43658))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Unknown format code 's' for object of type 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-62-c35bd7efe9fd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;34m\"%6s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;34m'toast'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{:>10s}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3.43658\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: Unknown format code 's' for object of type 'float'"
+     ]
+    }
+   ],
+   "source": [
+    "\"%6s\" % 'toast'\n",
+    "print(\"{:>10s}\".format('toast'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One zero:6.0, two zeros: 06.000, ninezeros: 00000006.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('One zero:{0:02}, two zeros: {0:06.3f}, ninezeros: {0:010}'.format(6.))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################\n",
+    "#Basic shapes\n",
+    "class FDSBasicShapes:\n",
+    "    \"\"\"\n",
+    "    Provide the basic shapes for FDS entities - boxes, planes and points.\n",
+    "    \"\"\"\n",
+    "    basic_shape_temp = {'xb': \"XB = {}, {}, {}, {}, {}, {}\",\n",
+    "                        'pb': \"PB{} = {}\",\n",
+    "                        'xyz': \"XYZ = {}\"}\n",
+    "    \n",
+    "    def __init__(self, x=0.0, y=0.0, z=0.0, \n",
+    "                 len_x=1.0, len_y=1.0, len_z=1.0, \n",
+    "                 loc_x=0.0, loc_y=0.0, loc_z=0.0,\n",
+    "                 digits=2, lead_chars = 5):\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        :param x: \n",
+    "        :param y: \n",
+    "        :param z: \n",
+    "        :param len_x: \n",
+    "        :param len_y: \n",
+    "        :param len_z: \n",
+    "        :param loc_x: \n",
+    "        :param loc_y: \n",
+    "        :param loc_z: \n",
+    "        :param digits: Number of characters added to total characters to account \n",
+    "            for a desired amount of digits after the decimal point.\n",
+    "        :param lead_chars: Number of characters before the decimal point, \n",
+    "            including the sign (-) and the decimal point. Assuming a few hundred \n",
+    "            meters are sufficient for FDS, this leads to a default of 5 (-999.).\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.z = z\n",
+    "        self.len_x = len_x\n",
+    "        self.len_y = len_y\n",
+    "        self.len_z = len_z\n",
+    "        self.loc_x = loc_x\n",
+    "        self.loc_y = loc_y\n",
+    "        self.loc_z = loc_z\n",
+    "        self.digits = digits\n",
+    "        self.lead_chars = lead_chars\n",
+    "\n",
+    "    def compile_box(self, show=False):\n",
+    "        # Set number digits after decimal point.\n",
+    "        digit_temp = \"{\"+\":.{}f\".format(self.digits)+\"}\"\n",
+    "        \n",
+    "        # Set number of total characters, without decimal point, thus\n",
+    "        # defining leading spaces.\n",
+    "        total_chars_temp = \"{\"+\":>{}s\".format(self.lead_chars + self.digits)+\"}\"\n",
+    "        \n",
+    "        # Define box size and location.\n",
+    "        x1 = self.x + self.loc_x\n",
+    "        y1 = self.y + self.loc_y\n",
+    "        z1 = self.z + self.loc_z\n",
+    "        x2 = self.len_x + self.loc_x\n",
+    "        y2 = self.len_y + self.loc_y\n",
+    "        z2 = self.len_z + self.loc_z\n",
+    "        coords = [x1, y1, z1, x2, y2, z2]\n",
+    "        \n",
+    "        # \n",
+    "        nl = []\n",
+    "        for coord in coords:\n",
+    "            new_digit = digit_temp.format(coord)\n",
+    "            new_space = total_chars_temp.format(new_digit)\n",
+    "            nl.append(new_space)\n",
+    "        \n",
+    "        box_shape = self.basic_shape_temp['xb']\n",
+    "        shape_line = box_shape.format(nl[0], \n",
+    "                                             nl[1], \n",
+    "                                             nl[2], \n",
+    "                                             nl[3], \n",
+    "                                             nl[4], \n",
+    "                                             nl[5])\n",
+    "        \n",
+    "        if show is True:\n",
+    "            #for line in shape_lines:\n",
+    "            print(shape_line)\n",
+    "            print(\"Leading chars: \", self.lead_chars)\n",
+    "            print(\"Digits: \", digit_temp)\n",
+    "            print(\"Total chars: \", total_chars_temp)\n",
+    "        \n",
+    "        return shape_line\n",
+    "    \n",
+    "    def compile_plane(self, show=False):\n",
+    "        plane_line = 'Plane is work in progress'\n",
+    "        return plane_line\n",
+    "    \n",
+    "    def compile_point(self, show=False):\n",
+    "        point_line = 'Point is work in progress'\n",
+    "        return point_line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XB =   10.00, -200.00,    0.00,    1.00,    1.00,    1.00\n",
+      "XB =    0.00,    0.00,    0.00,    1.00,    1.00,    1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# shapetest = None\n",
+    "shapetest = FDSBasicShapes(x=10.0,y=-200)\n",
+    "print(shapetest.compile_box(show=False))\n",
+    "shapetest2 = FDSBasicShapes()\n",
+    "print(shapetest2.compile_box(show=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################\n",
+    "# OBSTRUCTION CLASS\n",
+    "class FDSOBST:\n",
+    "    \n",
+    "    obst_temp = {'init': \"&OBST ID = '{}'\",\n",
+    "                 'allow_vent': \"ALLOW_VENT = .{}.\",\n",
+    "                 'bndf_face': \"BNDF_FACE({}) = .{}.\",\n",
+    "                 'bndf_obst': \"BNDF_OBST = .{}.\",\n",
+    "                 'bulk_density': \"BULK_DENSITY = {}\",\n",
+    "                 'color': \"COLOR = {}\",\n",
+    "                 'ctrl_id': \"CTRL_ID = {}\",\n",
+    "                 'devc_id': \"DEVC_ID = {}\",\n",
+    "                 'evacuation': \"EVACUATION = .{}.\",\n",
+    "                 'ht3d': \"HT3D = .{}.\",\n",
+    "                 'mesh_id': \"MESH_ID = {}\",\n",
+    "                 'mult_id': \"MULT_ID = {}\",\n",
+    "                 'outline': \"OUTLINE = .{}.\",\n",
+    "                 'overlay': \"OVERLAY = .{}.\",\n",
+    "                 'permit_hole': \"PERMIT_HOLE = .{}.\",\n",
+    "                 'prop_id': \"PROP_ID = {}\",\n",
+    "                 'removable': \"REMOVABLE = .{}.\",\n",
+    "                 'rgb': \"RGB(3) = {}\",\n",
+    "                 'surf_id': \"SURF_ID = {}\",\n",
+    "                 'surf_id6': \"SURF_ID6(6) = {}\",\n",
+    "                 'surf_ids': \"SURF_IDS(3) = {}\",\n",
+    "                 'texture_origin': \"TEXTURE_ORIGIN(3) = {}\",\n",
+    "                 'thicken': \"THICKEN = .{}.\",\n",
+    "                 'transparency': \"TRANSPARENCY = {}\",\n",
+    "                 'xb': \"XB(6) = {}\"}\n",
+    "    \n",
+    "    def __init__(self, init, allow_vent=None, bndf_face=None,\n",
+    "                 bndf_obst=None, bulk_density=None, color=None,\n",
+    "                 ctrl_id=None, devc_id=None, evacuation=None,\n",
+    "                 ht3d=None, mesh_id=None, mult_id=None,\n",
+    "                 outline=None, overlay=None, permit_hole=None,\n",
+    "                 prop_id=None, removable=None, rgb=None,\n",
+    "                 surf_id=None, surf_id6=None, surf_ids=None,\n",
+    "                 texture_origin=None, thicken=None,\n",
+    "                 transparency=None, xb=None, \n",
+    "                 x=0.0, y=0.0, z=0.0, \n",
+    "                 len_x=1.0, len_y=1.0, len_z=1.0, \n",
+    "                 loc_x=0.0, loc_y=0.0, loc_z=0.0,):\n",
+    "        \n",
+    "        self.init = init\n",
+    "        self.allow_vent = allow_vent\n",
+    "        self.bndf_face = bndf_face\n",
+    "        self.bndf_obst = bndf_obst\n",
+    "        self.bulk_density = bulk_density\n",
+    "        self.color = color\n",
+    "        self.ctrl_id = ctrl_id\n",
+    "        self.devc_id = devc_id\n",
+    "        self.evacuation = evacuation\n",
+    "        self.ht3d = ht3d\n",
+    "        self.mesh_id = mesh_id\n",
+    "        self.mult_id = mult_id\n",
+    "        self.outline = outline\n",
+    "        self.overlay = overlay\n",
+    "        self.permit_hole = permit_hole\n",
+    "        self.prop_id = prop_id\n",
+    "        self.removable = removable\n",
+    "        self.rgb = rgb\n",
+    "        self.surf_id = surf_id\n",
+    "        self.surf_id6 = surf_id6\n",
+    "        self.surf_ids = surf_ids\n",
+    "        self.texture_origin = texture_origin\n",
+    "        self.thicken = thicken\n",
+    "        self.transparency = transparency\n",
+    "        self.xb = xb\n",
+    "        \n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.z = z\n",
+    "        self.len_x = len_x\n",
+    "        self.len_y = len_y\n",
+    "        self.len_z = len_z\n",
+    "        self.loc_x = loc_x\n",
+    "        self.loc_y = loc_y\n",
+    "        self.loc_z = loc_z\n",
+    "        \n",
+    "        self.param_base = [['init', self.init], \n",
+    "                           ['allow_vent', allow_vent],\n",
+    "                           ['bndf_face', self.bndf_face],\n",
+    "                           ['bndf_obst', self.bndf_obst],\n",
+    "                           ['bulk_density', self.bulk_density],\n",
+    "                           ['color', self.color],\n",
+    "                           ['ctrl_id', self.ctrl_id],\n",
+    "                           ['devc_id', self.devc_id],\n",
+    "                           ['evacuation', self.evacuation],\n",
+    "                           ['ht3d', self.ht3d],\n",
+    "                           ['mesh_id', self.mesh_id],\n",
+    "                           ['mult_id', self.mult_id],\n",
+    "                           ['outline', self.outline],\n",
+    "                           ['overlay', self.overlay],\n",
+    "                           ['permit_hole', self.permit_hole],\n",
+    "                           ['prop_id', self.prop_id],\n",
+    "                           ['removable', self.removable],\n",
+    "                           ['rgb', self.rgb],\n",
+    "                           ['surf_id', self.surf_id],\n",
+    "                           ['surf_id6', self.surf_id6],\n",
+    "                           ['surf_ids', self.surf_ids],\n",
+    "                           ['texture_origin', self.texture_origin],\n",
+    "                           ['thicken', self.thicken],\n",
+    "                           ['transparency', self.transparency],\n",
+    "                           ['xb', self.xb]]\n",
+    "        \n",
+    "        self.box = [['x', self.x],\n",
+    "                           ['y', self.y],\n",
+    "                           ['z', self.z],\n",
+    "                           ['len_x', self.len_x],\n",
+    "                           ['len_y', self.len_y],\n",
+    "                           ['len_z', self.len_z],\n",
+    "                           ['loc_x', self.loc_x],\n",
+    "                           ['loc_y', self.loc_y],\n",
+    "                           ['loc_z', self.loc_z]]\n",
+    "                           \n",
+    "        \n",
+    "    def compile_obst(self, show=False):\n",
+    "        obst_lines = []\n",
+    "        \n",
+    "        # Initialise the obstruction.\n",
+    "        par = self.param_base[0]\n",
+    "        new_par = self.obst_temp[par[0]].format(par[1])\n",
+    "        obst_lines.append(new_par +',')\n",
+    "        \n",
+    "        # Define size and location of the obstruction.\n",
+    "        obst_dim = FDSBasicShapes(self.x, \n",
+    "                                  self.x, \n",
+    "                                  self.x, \n",
+    "                                  self.len_x, \n",
+    "                                  self.len_y, \n",
+    "                                  self.len_z, \n",
+    "                                  self.loc_x, \n",
+    "                                  self.loc_y, \n",
+    "                                  self.loc_z)\n",
+    "        new_par = obst_dim.compile_box()\n",
+    "        obst_lines.append('      ' + new_par +',')\n",
+    "        \n",
+    "        # Iterate over the remaining parameters of the \n",
+    "        # obstruction class.\n",
+    "        for par in self.param_base[1:]:\n",
+    "            if par[1] is not None:\n",
+    "                new_par = self.obst_temp[par[0]].format(par[1])\n",
+    "                obst_lines.append('      ' + new_par +',')\n",
+    "        \n",
+    "        obst_lines[-1] = obst_lines[-1][:-1] + ' /\\n'\n",
+    "        \n",
+    "        if show is True:\n",
+    "            for line in obst_lines:\n",
+    "                print(line)\n",
+    "        \n",
+    "        return obst_lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "&OBST ID = 'TestOBST',\n",
+      "      XB =    1.00,    2.00,    3.00,    3.00,    4.00,    5.00,\n",
+      "      COLOR = 255, 255, 0,\n",
+      "      SURF_ID = Cable 219 /\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[\"&OBST ID = 'TestOBST',\",\n",
+       " '      XB =    1.00,    2.00,    3.00,    3.00,    4.00,    5.00,',\n",
+       " '      COLOR = 255, 255, 0,',\n",
+       " '      SURF_ID = Cable 219 /\\n']"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_obst = FDSOBST('TestOBST', color=\"255, 255, 0\", \n",
+    "                    surf_id='Cable 219',\n",
+    "                    len_x=2,len_z=2,len_y=2, \n",
+    "                    loc_x=1, loc_y=2, loc_z=3)\n",
+    "test_obst.compile_obst(show=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
