--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,9 +1305,9 @@
     "                 digits=2, lead_chars = 5):\n",
     "        \"\"\"\n",
     "        \n",
-    "        :param x: \n",
-    "        :param y: \n",
-    "        :param z: \n",
+    "        :param x: Origin of the box, x coordinate.\n",
+    "        :param y: Origin of the box, y coordinate.\n",
+    "        :param z: Origin of the box, z coordinate.\n",
     "        :param len_x: \n",
     "        :param len_y: \n",
     "        :param len_z: \n",
@@ -1342,13 +1342,13 @@
     "        total_chars_temp = \"{\"+\":>{}s\".format(self.lead_chars + self.digits)+\"}\"\n",
     "        \n",
     "        # Define box size and location.\n",
-    "        x1 = self.x + self.loc_x\n",
-    "        y1 = self.y + self.loc_y\n",
-    "        z1 = self.z + self.loc_z\n",
-    "        x2 = self.len_x + self.loc_x\n",
-    "        y2 = self.len_y + self.loc_y\n",
-    "        z2 = self.len_z + self.loc_z\n",
-    "        coords = [x1, y1, z1, x2, y2, z2]\n",
+    "        x1 = self.x\n",
+    "        y1 = self.y\n",
+    "        z1 = self.z\n",
+    "        x2 = self.x + self.len_x\n",
+    "        y2 = self.y + self.len_y\n",
+    "        z2 = self.z + self.len_z\n",
+    "        coords = [x1, x2, y1, y2, z1, z2]\n",
     "        \n",
     "        # \n",
     "        nl = []\n",
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1420,7 @@
     "                 'bndf_face': \"BNDF_FACE({}) = .{}.\",\n",
     "                 'bndf_obst': \"BNDF_OBST = .{}.\",\n",
     "                 'bulk_density': \"BULK_DENSITY = {}\",\n",
-    "                 'color': \"COLOR = {}\",\n",
+    "                 'color': \"COLOR = '{}'\",\n",
     "                 'ctrl_id': \"CTRL_ID = {}\",\n",
     "                 'devc_id': \"DEVC_ID = {}\",\n",
     "                 'evacuation': \"EVACUATION = .{}.\",\n",
@@ -1537,8 +1537,8 @@
     "        \n",
     "        # Define size and location of the obstruction.\n",
     "        obst_dim = FDSBasicShapes(self.x, \n",
-    "                                  self.x, \n",
-    "                                  self.x, \n",
+    "                                  self.y, \n",
+    "                                  self.z, \n",
     "                                  self.len_x, \n",
     "                                  self.len_y, \n",
     "                                  self.len_z, \n",
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1575,7 @@
      "text": [
       "&OBST ID = 'TestOBST',\n",
       "      XB =    1.00,    2.00,    3.00,    3.00,    4.00,    5.00,\n",
-      "      COLOR = 255, 255, 0,\n",
+      "      RGB(3) = 255, 255, 0,\n",
       "      SURF_ID = Cable 219 /\n",
       "\n"
      ]
@@ -1585,17 +1585,17 @@
       "text/plain": [
        "[\"&OBST ID = 'TestOBST',\",\n",
        " '      XB =    1.00,    2.00,    3.00,    3.00,    4.00,    5.00,',\n",
-       " '      COLOR = 255, 255, 0,',\n",
+       " '      RGB(3) = 255, 255, 0,',\n",
        " '      SURF_ID = Cable 219 /\\n']"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_obst = FDSOBST('TestOBST', color=\"255, 255, 0\", \n",
+    "test_obst = FDSOBST('TestOBST', rgb=\"255, 255, 0\", \n",
     "                    surf_id='Cable 219',\n",
     "                    len_x=2,len_z=2,len_y=2, \n",
     "                    loc_x=1, loc_y=2, loc_z=3)\n",
@@ -1614,7 +1614,250 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "{'color': \"COLOR = {}\",\n",
+    " 'cylindrical': \"CYLINDRICAL = .{}.\",\n",
+    " 'evacuation': \"EVACUATION = .{}.\",\n",
+    " 'evac_humans': \"EVAC_HUMANS = .{}.\",\n",
+    " 'evac_z_offset': \"EVAC_Z_OFFSET = .{}.\",\n",
+    " 'ijk': \"IJK = {}\",\n",
+    " 'level': \"LEVEL = {}\",\n",
+    " 'mpi_process': \"MPI_PROCESS = {}\",\n",
+    " 'n_threads': \"N_THREADS = {}\",\n",
+    " 'mult_id': \"MULT_ID = '{}'\",\n",
+    " 'periodic_mesh_ids': \"PERIODIC_MESH_IDS = '{}'\",\n",
+    " 'rgb': \"RGB = {}\",\n",
+    " 'xb': \"XB(6) = {}\"}\n",
+    "\n",
+    "\n",
+    "color = None,\n",
+    "cylindrical = None,\n",
+    "evacuation = None,\n",
+    "evac_humans = None,\n",
+    "evac_z_offset = None,\n",
+    "ijk = None,\n",
+    "level = None,\n",
+    "mpi_process = None,\n",
+    "n_threads = None,\n",
+    "mult_id = None,\n",
+    "periodic_mesh_ids = None,\n",
+    "rgb = None,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################\n",
+    "# FDS MESH CLASS\n",
+    "class FDSMESH:\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    mesh_temp = {'init': \"&MESH ID = '{}'\", \n",
+    "                 'color': \"COLOR = '{}'\",\n",
+    "                 'cylindrical': \"CYLINDRICAL = .{}.\",\n",
+    "                 'evacuation': \"EVACUATION = .{}.\",\n",
+    "                 'evac_humans': \"EVAC_HUMANS = .{}.\",\n",
+    "                 'evac_z_offset': \"EVAC_Z_OFFSET = .{}.\",\n",
+    "                 'ijk': \"IJK = {}\",\n",
+    "                 'level': \"LEVEL = {}\",\n",
+    "                 'mpi_process': \"MPI_PROCESS = {}\",\n",
+    "                 'n_threads': \"N_THREADS = {}\",\n",
+    "                 'mult_id': \"MULT_ID = {}\",\n",
+    "                 'periodic_mesh_ids': \"PERIODIC_MESH_IDS = {}\",\n",
+    "                 'rgb': \"RGB = {}\",\n",
+    "                 'xb': \"XB(6) = {}\"}\n",
+    "    \n",
+    "\n",
+    "    def __init__(self, init, ijk=None, color=None, cylindrical=None,\n",
+    "                 evacuation=None, evac_humans=None, evac_z_offset=None,\n",
+    "                 level=None, mpi_process=None, n_threads=None,\n",
+    "                 mult_id=None, periodic_mesh_ids=None, rgb=None, xb=None,\n",
+    "                 x=0.0, y=0.0, z=0.0, \n",
+    "                 len_x=1.0, len_y=1.0, len_z=1.0, \n",
+    "                 loc_x=0.0, loc_y=0.0, loc_z=0.0,\n",
+    "                 digits=None):\n",
+    "\n",
+    "        self.init = init\n",
+    "        self.ijk = ijk\n",
+    "        self.color = color\n",
+    "        self.cylindrical = cylindrical\n",
+    "        self.evacuation = evacuation\n",
+    "        self.evac_humans = evac_humans\n",
+    "        self.evac_z_offset = evac_z_offset\n",
+    "        self.level = level\n",
+    "        self.mpi_process = mpi_process\n",
+    "        self.n_threads = n_threads\n",
+    "        self.mult_id = mult_id\n",
+    "        self.periodic_mesh_ids = periodic_mesh_ids\n",
+    "        self.rgb = rgb\n",
+    "        self.xb = xb\n",
+    "        \n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.z = z\n",
+    "        self.len_x = len_x\n",
+    "        self.len_y = len_y\n",
+    "        self.len_z = len_z\n",
+    "        self.loc_x = loc_x\n",
+    "        self.loc_y = loc_y\n",
+    "        self.loc_z = loc_z\n",
+    "        self.digits = digits\n",
+    "        \n",
+    "        self.param_base = [['init', self.init], \n",
+    "                           ['ijk', self.ijk],\n",
+    "                           ['color', self.color],\n",
+    "                           ['cylindrical', self.cylindrical],\n",
+    "                           ['evacuation', self.evacuation],\n",
+    "                           ['evac_humans', self.evac_humans],\n",
+    "                           ['evac_z_offset', self.evac_z_offset],\n",
+    "                           ['level', self.level],\n",
+    "                           ['mpi_process', self.mpi_process],\n",
+    "                           ['n_threads', self.n_threads],\n",
+    "                           ['mult_id', self.mult_id],\n",
+    "                           ['periodic_mesh_ids', self.periodic_mesh_ids],\n",
+    "                           ['rgb', self.rgb],\n",
+    "                           ['xb', self.xb]]\n",
+    "        \n",
+    "        self.box = [['x', self.x],\n",
+    "                    ['y', self.y],\n",
+    "                    ['z', self.z],\n",
+    "                    ['len_x', self.len_x],\n",
+    "                    ['len_y', self.len_y],\n",
+    "                    ['len_z', self.len_z],\n",
+    "                    ['loc_x', self.loc_x],\n",
+    "                    ['loc_y', self.loc_y],\n",
+    "                    ['loc_z', self.loc_z]]\n",
+    "\n",
+    "    def compile_mesh(self, show=False):\n",
+    "        mesh_lines = []\n",
+    "        \n",
+    "        # Initialise the mesh.\n",
+    "        par = self.param_base[0]\n",
+    "        new_par = self.mesh_temp[par[0]].format(par[1])\n",
+    "        mesh_lines.append(new_par +',')\n",
+    "        \n",
+    "        # Define the mesh resolution.\n",
+    "        new_ijk = \"{}, {}, {}\"\n",
+    "        par = self.param_base[1]\n",
+    "        nijk = new_ijk.format(par[1][0], \n",
+    "                              par[1][1], \n",
+    "                              par[1][2])\n",
+    "        \n",
+    "        new_par = self.mesh_temp[par[0]].format(nijk)\n",
+    "        mesh_lines.append('      ' + new_par +',')\n",
+    "        \n",
+    "        # Define size and location of the mesh.\n",
+    "        mesh_dim = FDSBasicShapes(self.x, \n",
+    "                                  self.y, \n",
+    "                                  self.z, \n",
+    "                                  self.len_x, \n",
+    "                                  self.len_y, \n",
+    "                                  self.len_z, \n",
+    "                                  self.loc_x, \n",
+    "                                  self.loc_y, \n",
+    "                                  self.loc_z, \n",
+    "                                  self.digits)\n",
+    "        new_par = mesh_dim.compile_box()\n",
+    "        mesh_lines.append('      ' + new_par +',')\n",
+    "        \n",
+    "        # Iterate over the remaining parameters of the \n",
+    "        # mesh class.\n",
+    "        for par in self.param_base[2:]:\n",
+    "            if par[1] is not None:\n",
+    "                new_par = self.mesh_temp[par[0]].format(par[1])\n",
+    "                mesh_lines.append('      ' + new_par +',')\n",
+    "        \n",
+    "        mesh_lines[-1] = mesh_lines[-1][:-1] + ' /\\n'\n",
+    "        \n",
+    "        if show is True:\n",
+    "            for line in mesh_lines:\n",
+    "                print(line)\n",
+    "        \n",
+    "        return mesh_lines\n",
+    "    \n",
+    "#     def mesh(self):\n",
+    "#         # Initialise the location of the objects origin.\n",
+    "#         if self.loc_x is None:\n",
+    "#             self.loc_x = 0.0\n",
+    "\n",
+    "#         if self.loc_y is None:\n",
+    "#             self.loc_y = 0.0\n",
+    "#         if self.loc_z is None:\n",
+    "#             self.loc_z = 0.0\n",
+    "\n",
+    "#         # Set default size if none is provided.\n",
+    "#         if self.len_x is None:\n",
+    "#             self.len_x = 1.0\n",
+    "#         if self.len_y is None:\n",
+    "#             self.len_y = 1.0\n",
+    "#         if self.len_z is None:\n",
+    "#             self.len_z = 1.0\n",
+    "\n",
+    "#         # Calculate objects dimensions, based on size and location.\n",
+    "#         x1 = self.len_x1 + self.loc_x\n",
+    "#         x2 = self.len_x2 + self.loc_x\n",
+    "#         y1 = self.len_y1 + self.loc_y\n",
+    "#         y2 = self.len_y2 + self.loc_y\n",
+    "#         z1 = self.len_z1 + self.loc_z\n",
+    "#         z2 = self.len_z2 + self.loc_z\n",
+    "\n",
+    "#         bx1 = BoxShape(x1, x2, y1, y2, z1, z2)\n",
+    "#         m = '&MESH IJK={},{},{}, {}'.format(10, 10, 10, bx1)\n",
+    "#         print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "&MESH ID = 'TestMESH',\n",
+      "      IJK = 6, 6, 8,\n",
+      "      XB =   -0.141,    0.141,   -0.141,    0.141,   -0.047,    0.329,\n",
+      "      COLOR = 'BLUE' /\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[\"&MESH ID = 'TestMESH',\",\n",
+       " '      IJK = 6, 6, 8,',\n",
+       " '      XB =   -0.141,    0.141,   -0.141,    0.141,   -0.047,    0.329,',\n",
+       " \"      COLOR = 'BLUE' /\\n\"]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cell_size = 0.047\n",
+    "cells_x = 6\n",
+    "cells_y = 6\n",
+    "cells_z = 8\n",
+    "\n",
+    "test_mesh = FDSMESH('TestMESH', color=\"BLUE\", digits=3,\n",
+    "                    ijk=[cells_x,\n",
+    "                         cells_y,\n",
+    "                         cells_z],\n",
+    "                    x=-(cells_x * cell_size/2), \n",
+    "                    y=-(cells_y * cell_size/2), \n",
+    "                    z=-cell_size,\n",
+    "                    len_x=cells_x * cell_size,\n",
+    "                    len_y=cells_y * cell_size,\n",
+    "                    len_z=cells_z * cell_size)\n",
+    "test_mesh.compile_mesh(show=True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1724,7 +1967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
