Added function to calculate averaged cable mass per unit length.

--- a/FLASH_CAT.ipynb
+++ b/FLASH_CAT.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import FLASH_CAT as FC"
+    "import FLASH_CAT as FC\n",
+    "import numpy as np"
    ]
   },
   {
@@ -31,6 +32,50 @@
     "                        residue_yield=0.25,\n",
     "                        mass_length=0.52, \n",
     "                        tray_width=0.45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plastic_fraction = np.array([0.1, 0.1, 0.1])\n",
+    "linear_cable_mass = np.array([20, 30, 10])\n",
+    "intermediate = np.sum(plastic_fraction * linear_cable_mass)\n",
+    "\n",
+    "intermediate/np.sum(linear_cable_mass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "30*0.1"
    ]
   },
   {
